# TIDE

./: Cargo.toml  README.md  TIDE_V1_ARCHITECTURE.md  fix.patch  scratch.sh  test_bg_sig.zsh  test_exit.zsh  test_libc_kill.zsh  test_pgid.zsh  test_precmd.zsh  test_tide.zsh  test_tmout.zsh  test_tto.zsh  test_wake.zsh  test_zle.zsh  test_zsh_trap.zsh  tide.bash  tide.zsh  verify.sh  verify_out.txt  verify_output.txt
src/: app.rs  input.rs  life.rs  main.rs  render.rs  screen.rs
