[package]
name = "tide"
version = "0.1.0"
edition = "2024"
default-run = "tide"

[dependencies]
crossterm = "0.29.0"
libc = "0.2.186"

# tide: visual screensaver runtime
# launched by tide-watch (or directly with `tide --now`)
[[bin]]
name = "tide"
path = "src/main.rs"

# tide-watch: tiny idle watcher
# sleeps for --timeout seconds then spawns tide
# shell hooks kill it when user starts a command
[[bin]]
name = "tide-watch"
path = "src/bin/tide_watch.rs"
